--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "author": "Michael Wettstein <chischte@gmx.ch>",
   "license": "MIT",
-   "dependencies": {
+  "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "description": "udemy-react-1",
   "bugs": {
@@ -28,6 +30,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "live-server public/",
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "build": "webpack --watch"
   }
 }
