--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "live-server": "^1.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "validator": "^13.1.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
@@ -23,9 +27,9 @@
   "homepage": "https://github.com/chischte/udemy-react-indecision-app#readme",
   "devDependencies": {
     "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4"
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^7.1.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
